--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-nearby:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
-    implementation 'com.android.support:design:29.1.0'
+
+
+    implementation 'com.android.support:appcompat-v7:29.1.1'
+    implementation 'com.android.support:design:29.1.1'
 }
